--- a/package.json
+++ b/package.json
@@ -1,35 +1,54 @@
 {
   "name": "eestec-main-page",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --host 0.0.0.0",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "inspect": "vue-cli-service inspect",
+    "start": "node server.js"
   },
   "dependencies": {
-    "bootstrap-vue": "^2.0.0-rc.19",
-    "core-js": "^2.6.5",
-    "vue": "^2.6.10",
-    "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-brands-svg-icons": "^5.6.3",
+    "@fortawesome/free-regular-svg-icons": "^5.6.3",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/vue-fontawesome": "^0.1.4",
+    "es6-promise": "^4.2.5",
+    "express": "^4.16.4",
+    "i": "^0.3.6",
+    "npm": "^6.7.0",
+    "register-service-worker": "^1.5.2",
+    "vue": "^2.5.21",
+    "vue-scrollto": "^2.13.0",
+    "vue-svg-loader": "^0.12.0",
+    "vue2-flip-countdown": "^0.5.3",
+    "vue2-leaflet": "^1.2.3"
   },
   "devDependencies": {
-    "@babel/polyfill": "^7.4.4",
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-eslint": "^3.8.0",
-    "@vue/cli-service": "^3.8.0",
+    "@babel/polyfill": "^7.0.0-beta.53",
+    "@vue/cli-plugin-babel": "^3.3.0",
+    "@vue/cli-plugin-eslint": "^3.3.0",
+    "@vue/cli-plugin-pwa": "^3.3.0",
+    "@vue/cli-service": "^3.3.1",
     "babel-eslint": "^10.0.1",
-    "bootstrap": "^4.3.1",
-    "eslint": "^5.16.0",
+    "babel-merge": "^2.0.1",
+    "bootstrap": "^4.2.1",
+    "bootstrap-vue": "^2.0.0-rc.11",
+    "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
-    "mutationobserver-shim": "^0.3.3",
-    "node-sass": "^4.12.0",
-    "popper.js": "^1.15.0",
-    "portal-vue": "^2.1.4",
+    "file-loader": "^3.0.1",
+    "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
-    "vue-cli-plugin-bootstrap-vue": "^0.4.0",
-    "vue-template-compiler": "^2.6.10"
+    "sass-resources-loader": "^2.0.0",
+    "serve-static": "^1.13.2",
+    "style-resources-loader": "^1.2.1",
+    "vue-cli-plugin-bootstrap-vue": "^0.1.0",
+    "vue-cli-plugin-style-resources-loader": "^0.1.3",
+    "vue-loader": "^15.6.2",
+    "vue-template-compiler": "^2.5.21",
+    "webpack-merge": "^4.2.1"
   },
   "eslintConfig": {
     "root": true,
@@ -52,6 +71,7 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions"
+    "last 2 versions",
+    "not ie <= 8"
   ]
 }
