--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "npm": "^6.7.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
+    "vue-particles": "^1.0.9",
     "vue-scrollto": "^2.13.0",
     "vue-svg-loader": "^0.12.0",
     "vue2-flip-countdown": "^0.5.3",
