--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "style-resources-loader": "^1.2.1",
     "vue-cli-plugin-bootstrap-vue": "^0.1.0",
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
+    "vue-headroom": "^0.10.1",
     "vue-loader": "^15.6.2",
     "vue-template-compiler": "^2.5.21",
     "webpack-merge": "^4.2.1"
