--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@babel/runtime": "^7.5.5",
+    "@babel/runtime-corejs2": "^7.5.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-brands-svg-icons": "^5.6.3",
     "@fortawesome/free-regular-svg-icons": "^5.6.3",
@@ -25,7 +27,8 @@
     "vue-scrollto": "^2.13.0",
     "vue-svg-loader": "^0.12.0",
     "vue2-flip-countdown": "^0.5.3",
-    "vue2-leaflet": "^1.2.3"
+    "vue2-leaflet": "^1.2.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.0.0-beta.53",
@@ -49,6 +52,7 @@
     "vue-cli-plugin-style-resources-loader": "^0.1.3",
     "vue-headroom": "^0.10.1",
     "vue-loader": "^15.6.2",
+    "vue-media-query-mixin": "^0.1.0",
     "vue-template-compiler": "^2.5.21",
     "webpack-merge": "^4.2.1"
   },
