--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
     "vue-particles": "^1.0.9",
+		"vue-router": "^3.1.3",
     "vue-scrollto": "^2.13.0",
     "vue-svg-loader": "^0.12.0",
     "vue2-flip-countdown": "^0.5.3",
