--- a/package.json
+++ b/package.json
@@ -1,84 +1,86 @@
 {
-  "name": "eestec-main-page",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve --host 0.0.0.0",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "inspect": "vue-cli-service inspect",
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.5.5",
-    "@babel/runtime-corejs2": "^7.5.5",
-    "@fortawesome/fontawesome-svg-core": "^1.2.12",
-    "@fortawesome/free-brands-svg-icons": "^5.6.3",
-    "@fortawesome/free-regular-svg-icons": "^5.6.3",
-    "@fortawesome/free-solid-svg-icons": "^5.6.3",
-    "@fortawesome/vue-fontawesome": "^0.1.4",
-    "es6-promise": "^4.2.5",
-    "express": "^4.16.4",
-    "i": "^0.3.6",
-    "npm": "^6.7.0",
-    "register-service-worker": "^1.5.2",
-    "vue": "^2.5.21",
-    "vue-particles": "^1.0.9",
+	"name": "eestec-main-page",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve --host 0.0.0.0",
+		"build": "vue-cli-service build",
+		"lint": "vue-cli-service lint",
+		"inspect": "vue-cli-service inspect",
+		"start": "node server.js"
+	},
+	"dependencies": {
+		"@babel/runtime": "^7.5.5",
+		"@babel/runtime-corejs2": "^7.5.5",
+		"@fortawesome/fontawesome-svg-core": "^1.2.12",
+		"@fortawesome/free-brands-svg-icons": "^5.6.3",
+		"@fortawesome/free-regular-svg-icons": "^5.6.3",
+		"@fortawesome/free-solid-svg-icons": "^5.6.3",
+		"@fortawesome/vue-fontawesome": "^0.1.4",
+		"axios": "^0.19.0",
+		"es6-promise": "^4.2.5",
+		"express": "^4.16.4",
+		"i": "^0.3.6",
+		"npm": "^6.7.0",
+		"register-service-worker": "^1.5.2",
+		"vue": "^2.5.21",
+		"vue-particles": "^1.0.9",
 		"vue-router": "^3.1.3",
-    "vue-scrollto": "^2.13.0",
-    "vue-svg-loader": "^0.12.0",
-    "vue2-flip-countdown": "^0.5.3",
-    "vue2-leaflet": "^1.2.3",
-    "vuex": "^3.1.1"
-  },
-  "devDependencies": {
-    "@babel/polyfill": "^7.0.0-beta.53",
-    "@vue/cli-plugin-babel": "^3.3.0",
-    "@vue/cli-plugin-eslint": "^3.3.0",
-    "@vue/cli-plugin-pwa": "^3.3.0",
-    "@vue/cli-service": "^3.3.1",
-    "babel-eslint": "^10.0.1",
-    "babel-merge": "^2.0.1",
-    "bootstrap": "^4.2.1",
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "file-loader": "^3.0.1",
-    "node-sass": "^4.11.0",
-    "sass-loader": "^7.1.0",
-    "sass-resources-loader": "^2.0.0",
-    "serve-static": "^1.13.2",
-    "style-resources-loader": "^1.2.1",
-    "vue-cli-plugin-bootstrap-vue": "^0.1.0",
-    "vue-cli-plugin-style-resources-loader": "^0.1.3",
-    "vue-headroom": "^0.10.1",
-    "vue-loader": "^15.6.2",
-    "vue-media-query-mixin": "^0.1.0",
-    "vue-template-compiler": "^2.5.21",
-    "webpack-merge": "^4.2.1"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+		"vue-scrollto": "^2.13.0",
+		"vue-svg-loader": "^0.12.0",
+		"vue2-flip-countdown": "^0.5.3",
+		"vue2-leaflet": "^1.2.3",
+		"vuex": "^3.1.1"
+	},
+	"devDependencies": {
+		"@babel/plugin-syntax-throw-expressions": "^7.2.0",
+		"@babel/polyfill": "^7.0.0-beta.53",
+		"@vue/cli-plugin-babel": "^3.3.0",
+		"@vue/cli-plugin-eslint": "^3.3.0",
+		"@vue/cli-plugin-pwa": "^3.3.0",
+		"@vue/cli-service": "^3.3.1",
+		"babel-eslint": "^10.0.1",
+		"babel-merge": "^2.0.1",
+		"bootstrap": "^4.2.1",
+		"bootstrap-vue": "^2.0.0-rc.11",
+		"eslint": "^5.8.0",
+		"eslint-plugin-vue": "^5.0.0",
+		"file-loader": "^3.0.1",
+		"node-sass": "^4.11.0",
+		"sass-loader": "^7.1.0",
+		"sass-resources-loader": "^2.0.0",
+		"serve-static": "^1.13.2",
+		"style-resources-loader": "^1.2.1",
+		"vue-cli-plugin-bootstrap-vue": "^0.1.0",
+		"vue-cli-plugin-style-resources-loader": "^0.1.3",
+		"vue-headroom": "^0.10.1",
+		"vue-loader": "^15.6.2",
+		"vue-media-query-mixin": "^0.1.0",
+		"vue-template-compiler": "^2.5.21",
+		"webpack-merge": "^4.2.1"
+	},
+	"eslintConfig": {
+		"root": true,
+		"env": {
+			"node": true
+		},
+		"extends": [
+			"plugin:vue/essential",
+			"eslint:recommended"
+		],
+		"rules": {},
+		"parserOptions": {
+			"parser": "babel-eslint"
+		}
+	},
+	"postcss": {
+		"plugins": {
+			"autoprefixer": {}
+		}
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not ie <= 8"
+	]
 }
