--- a/package.json
+++ b/package.json
@@ -10,54 +10,51 @@
 		"start": "node server.js"
 	},
 	"dependencies": {
-		"@babel/runtime": "^7.5.5",
-		"@babel/runtime-corejs2": "^7.5.5",
-		"@fortawesome/fontawesome-svg-core": "^1.2.12",
-		"@fortawesome/free-brands-svg-icons": "^5.6.3",
-		"@fortawesome/free-regular-svg-icons": "^5.6.3",
-		"@fortawesome/free-solid-svg-icons": "^5.6.3",
-		"@fortawesome/vue-fontawesome": "^0.1.4",
-		"axios": "^0.19.0",
-		"es6-promise": "^4.2.5",
-		"express": "^4.16.4",
+		"@babel/runtime": "^7.8.7",
+		"@babel/runtime-corejs2": "^7.8.7",
+		"@fortawesome/fontawesome-svg-core": "^1.2.27",
+		"@fortawesome/free-brands-svg-icons": "^5.12.1",
+		"@fortawesome/free-regular-svg-icons": "^5.12.1",
+		"@fortawesome/free-solid-svg-icons": "^5.12.1",
+		"@fortawesome/vue-fontawesome": "^0.1.9",
+		"axios": "^0.19.2",
+		"es6-promise": "^4.2.8",
+		"express": "^4.17.1",
 		"i": "^0.3.6",
-		"npm": "^6.7.0",
-		"register-service-worker": "^1.5.2",
-		"vue": "^2.5.21",
+		"npm": "^6.14.2",
+		"register-service-worker": "^1.7.0",
+		"vue": "^2.6.11",
 		"vue-particles": "^1.0.9",
-		"vue-router": "^3.1.3",
-		"vue-scrollto": "^2.13.0",
+		"vue-router": "^3.1.6",
+		"vue-scrollto": "^2.17.1",
 		"vue-svg-loader": "^0.12.0",
 		"vue2-flip-countdown": "^0.5.3",
-		"vue2-leaflet": "^1.2.3",
-		"vuex": "^3.1.1"
+		"vuex": "^3.1.3"
 	},
 	"devDependencies": {
-		"@babel/plugin-syntax-throw-expressions": "^7.2.0",
-		"@babel/polyfill": "^7.0.0-beta.53",
-		"@vue/cli-plugin-babel": "^3.3.0",
-		"@vue/cli-plugin-eslint": "^3.3.0",
-		"@vue/cli-plugin-pwa": "^3.3.0",
-		"@vue/cli-service": "^3.3.1",
-		"babel-eslint": "^10.0.1",
+		"@babel/plugin-syntax-throw-expressions": "^7.8.3",
+		"@babel/polyfill": "^7.8.7",
+		"@vue/cli-plugin-babel": "^3.12.1",
+		"@vue/cli-plugin-eslint": "^3.12.1",
+		"@vue/cli-plugin-pwa": "^3.12.1",
+		"@vue/cli-service": "^3.12.1",
+		"babel-eslint": "^10.1.0",
 		"babel-merge": "^2.0.1",
-		"bootstrap": "^4.2.1",
-		"bootstrap-vue": "^2.0.0-rc.11",
-		"eslint": "^5.8.0",
-		"eslint-plugin-vue": "^5.0.0",
+		"bootstrap": "^4.4.1",
+		"bootstrap-vue": "^2.6.1",
+		"eslint": "^5.16.0",
+		"eslint-plugin-vue": "^5.2.3",
 		"file-loader": "^3.0.1",
-		"node-sass": "^4.11.0",
-		"sass-loader": "^7.1.0",
-		"sass-resources-loader": "^2.0.0",
-		"serve-static": "^1.13.2",
-		"style-resources-loader": "^1.2.1",
-		"vue-cli-plugin-bootstrap-vue": "^0.1.0",
-		"vue-cli-plugin-style-resources-loader": "^0.1.3",
+		"node-sass": "^4.13.1",
+		"sass-loader": "^7.3.1",
+		"sass-resources-loader": "^2.0.1",
+		"serve-static": "^1.14.1",
+		"style-resources-loader": "^1.3.3",
 		"vue-headroom": "^0.10.1",
-		"vue-loader": "^15.6.2",
+		"vue-loader": "^15.9.0",
 		"vue-media-query-mixin": "^0.1.0",
-		"vue-template-compiler": "^2.5.21",
-		"webpack-merge": "^4.2.1"
+		"vue-template-compiler": "^2.6.11",
+		"webpack-merge": "^4.2.2"
 	},
 	"eslintConfig": {
 		"root": true,
