--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"npm": "^6.14.2",
 		"register-service-worker": "^1.7.0",
 		"vue": "^2.6.11",
+		"vue-carousel": "^0.18.0",
 		"vue-particles": "^1.0.9",
 		"vue-router": "^3.1.6",
 		"vue-scrollto": "^2.17.1",
