--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
 		"build": "vue-cli-service build",
 		"lint": "vue-cli-service lint",
 		"inspect": "vue-cli-service inspect",
-		"start": "node server.js"
+		"start": "node app.js"
 	},
 	"dependencies": {
-		"@babel/runtime": "^7.8.7",
-		"@babel/runtime-corejs2": "^7.8.7",
+		"@babel/runtime": "^7.9.2",
+		"@babel/runtime-corejs2": "^7.9.2",
 		"@fortawesome/fontawesome-svg-core": "^1.2.27",
 		"@fortawesome/free-brands-svg-icons": "^5.12.1",
 		"@fortawesome/free-regular-svg-icons": "^5.12.1",
@@ -24,7 +24,7 @@
 		"npm": "^6.14.2",
 		"register-service-worker": "^1.7.0",
 		"vue": "^2.6.11",
-		"vue-carousel": "^0.18.0",
+		"vue-carousel-3d": "^0.2.0",
 		"vue-particles": "^1.0.9",
 		"vue-router": "^3.1.6",
 		"vue-scrollto": "^2.17.1",
@@ -51,6 +51,7 @@
 		"sass-resources-loader": "^2.0.1",
 		"serve-static": "^1.14.1",
 		"style-resources-loader": "^1.3.3",
+		"vue-carousel": "^0.18.0",
 		"vue-headroom": "^0.10.1",
 		"vue-loader": "^15.9.0",
 		"vue-media-query-mixin": "^0.1.0",
