--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ language: node_js
 node_js:
   - "stable"
 before_script:
-  - npm install
+  - npm ci
 script:
   - npm run build
-deploy:
-  skip_cleanup: true
 
