--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,20 @@
 language: node_js
-node_js:
-  - "stable"
-before_script:
-  - npm ci
-script:
-  - npm run build
 
+node_js:
+- stable
+
+env:
+  - SERVER_ADDRESS: s3.mydevil.net
+
+before_install:
+  - openssl aes-256-cbc -K $encrypted_dfdcfd5172af_key -iv $encrypted_dfdcfd5172af_iv
+    -in deploy_key.enc -out ./deploy_key -d
+  - eval "$(ssh-agent -s)"
+  - chmod 600 ./deploy_key
+  - echo -e "Host $SERVER_ADDRESS\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+  - ssh-add ./deploy_key
+  - ssh -i ./deploy_key eestec@s3.mydevil.net pwd
+before_script:
+- npm ci
+script:
+- npm run build
