--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,22 @@
 language: node_js
+
 node_js:
 - stable
+
 env:
 - SERVER_ADDRESS: s3.mydevil.net
+
+before_install:
+  - openssl aes-256-cbc -K $encrypted_dfdcfd5172af_key -iv $encrypted_dfdcfd5172af_iv
+    -in deploy_key.enc -out ./deploy_key -d
+  - eval "$(ssh-agent -s)"
+  - chmod 600 ./deploy_key
+  - echo -e "Host $SERVER_IP_ADDRESS\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
+  - ssh-add ./deploy_key
+  - ssh -i ./deploy_key eestec@$SERVER_ADDRESS pwd
+
 before_script:
 - npm ci
+
 script:
 - npm run build
-before_install:
-- openssl aes-256-cbc -K $encrypted_dfdcfd5172af_key -iv $encrypted_dfdcfd5172af_iv
-  -in deploy_key.enc -out ./deploy_key -d
