--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,7 @@ node_js:
 - stable
 
 env:
-- SERVER_ADDRESS: s3.mydevil.net
-- USERNAME: eestec
-- DEV_LOCATION: ~/domains/dev.eestec.pl/public_nodejs
-- PRD_LOCATION: ~/domains/dev.eestec.pl/public_nodejs/prd
+- SERVER_ADDRESS=s3.mydevil.net USERNAME=eestec DEV_LOCATION=~/domains/dev.eestec.pl/public_nodejs PRD_LOCATION=~/domains/dev.eestec.pl/public_nodejs/prd
 
 before_install:
   - openssl aes-256-cbc -K $encrypted_dfdcfd5172af_key -iv $encrypted_dfdcfd5172af_iv
