--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,17 @@
 language: node_js
-
-node_js:
-- stable
-
-env:
-- SERVER_ADDRESS: s3.mydevil.net
-
-before_install:
-  - openssl aes-256-cbc -K $encrypted_dfdcfd5172af_key -iv $encrypted_dfdcfd5172af_iv
-    -in deploy_key.enc -out ./deploy_key -d
-  - eval "$(ssh-agent -s)"
-  - chmod 600 ./deploy_key
-  - echo -e "Host $SERVER_ADDRESS\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-  - ssh-add ./deploy_key
-  - ssh -i ./deploy_key eestec@$SERVER_ADDRESS pwd
-
-before_script:
-- npm ci
-
-script:
-- npm run build
-
-after_script:
-- scp -r ./dist eestec@$SERVER_ADDRESS:~/domains/dev.eestec.pl/public_nodejs
+os: linux
+dist: xenial
+node_js: stable
+script: npm run build
+before_deploy: ./iac/before_deploy.sh
+deploy:
+  - provider: script
+    skip_cleanup: true
+    script: bash ./iac/deploy.sh $DEV_LOCATION
+    on:
+      branch: develop
+  - provider: script
+    skip_cleanup: true
+    script: bash ./iac/deploy.sh $PRD_LOCATION
+    on:
+      branch: master
