--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
 		"bootstrap": "^4.4.1",
 		"bootstrap-vue": "^2.6.1",
 		"eslint": "^5.16.0",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-prettier": "^3.1.4",
 		"eslint-plugin-vue": "^5.2.3",
 		"file-loader": "^3.0.1",
 		"node-sass": "^4.13.1",
@@ -65,6 +67,7 @@
 		},
 		"extends": [
 			"plugin:vue/essential",
+			"plugin:prettier/recommended",
 			"eslint:recommended"
 		],
 		"rules": {},
