--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@fortawesome/free-solid-svg-icons": "^5.12.1",
 		"@fortawesome/vue-fontawesome": "^0.1.9",
 		"axios": "^0.19.2",
+		"dotenv": "^8.2.0",
 		"es6-promise": "^4.2.8",
 		"express": "^4.17.1",
 		"i": "^0.3.6",
@@ -48,7 +49,7 @@
 		"eslint-plugin-prettier": "^3.1.4",
 		"eslint-plugin-vue": "^5.2.3",
 		"file-loader": "^3.0.1",
-		"node-sass": "^4.13.1",
+		"node-sass": "^4.14.1",
 		"sass-loader": "^7.3.1",
 		"sass-resources-loader": "^2.0.1",
 		"serve-static": "^1.14.1",
