--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"eslint-plugin-prettier": "^3.1.4",
 		"eslint-plugin-vue": "^5.2.3",
 		"file-loader": "^3.0.1",
+		"lint-staged": "^10.4.0",
 		"node-sass": "^4.14.1",
 		"sass-loader": "^7.3.1",
 		"sass-resources-loader": "^2.0.1",
@@ -94,7 +95,7 @@
 		"pre-commit": "lint-staged"
 	},
 	"lint-staged": {
-		"*.{js,vue,scss}": [
+		"*.{js,vue}": [
 			"npm run lint",
 			"git add"
 		]
