--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
 		"build": "vue-cli-service build",
 		"lint": "vue-cli-service lint",
 		"inspect": "vue-cli-service inspect",
-		"start": "node app.js",
-		"pretty": "prettier"
+		"start": "node app.js"
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.9.2",
