--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"es6-promise": "^4.2.8",
 		"express": "^4.17.1",
 		"i": "^0.3.6",
-		"npm": "^6.14.2",
+		"npm": "^6.14.8",
 		"register-service-worker": "^1.7.0",
 		"vue": "^2.6.11",
 		"vue-carousel-3d": "^0.2.0",
@@ -49,6 +49,7 @@
 		"eslint-plugin-prettier": "^3.1.4",
 		"eslint-plugin-vue": "^5.2.3",
 		"file-loader": "^3.0.1",
+		"lint-staged": "^10.4.0",
 		"node-sass": "^4.14.1",
 		"sass-loader": "^7.3.1",
 		"sass-resources-loader": "^2.0.1",
