--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"vue-router": "^3.1.6",
 		"vue-scrollto": "^2.17.1",
 		"vue-svg-loader": "^0.12.0",
+		"vue-truncate-filter": "^1.1.7",
 		"vue2-flip-countdown": "^0.5.3",
 		"vuex": "^3.1.3"
 	},
@@ -94,7 +95,7 @@
 		"pre-commit": "lint-staged"
 	},
 	"lint-staged": {
-		"*.{js,vue,scss}": [
+		"*.{js,vue}": [
 			"npm run lint",
 			"git add"
 		]
