--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: node_js
 os: linux
 dist: xenial
 node_js: stable
+before_script: npm run test:unit
 script: npm run build
 before_deploy: ./iac/before_deploy.sh
 deploy:
