--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"serve": "vue-cli-service serve --host 0.0.0.0",
 		"build": "vue-cli-service build",
+		"test:unit": "ava",
 		"lint": "vue-cli-service lint",
 		"inspect": "vue-cli-service inspect",
 		"start": "node app.js"
@@ -34,12 +35,15 @@
 		"vuex": "^3.1.3"
 	},
 	"devDependencies": {
+		"@ava/babel": "^1.0.1",
 		"@babel/plugin-syntax-throw-expressions": "^7.8.3",
 		"@babel/polyfill": "^7.8.7",
 		"@vue/cli-plugin-babel": "^3.12.1",
 		"@vue/cli-plugin-eslint": "^3.12.1",
 		"@vue/cli-plugin-pwa": "^3.12.1",
 		"@vue/cli-service": "^3.12.1",
+		"@vue/test-utils": "^1.0.3",
+		"ava": "^3.13.0",
 		"babel-eslint": "^10.1.0",
 		"babel-merge": "^2.0.1",
 		"bootstrap": "^4.4.1",
@@ -77,6 +81,9 @@
 			"parser": "babel-eslint"
 		}
 	},
+	"prettier": {
+		"singleQuote": true
+	},
 	"postcss": {
 		"plugins": {
 			"autoprefixer": {}
@@ -87,9 +94,6 @@
 		"last 2 versions",
 		"not ie <= 8"
 	],
-	"prettier": {
-		"singleQuote": true
-	},
 	"gitHooks": {
 		"pre-commit": "lint-staged"
 	},
@@ -97,6 +101,13 @@
 		"*.{js,vue,scss}": [
 			"npm run lint",
 			"git add"
+		]
+	},
+	"ava": {
+		"babel": true,
+		"files": [
+			"**/__tests__/*.{j,t}s?(x)",
+			"**/tests/unit/**/*.test.{j,t}s?(x)"
 		]
 	}
 }
