--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
 		"sass-resources-loader": "^2.0.1",
 		"serve-static": "^1.14.1",
 		"style-resources-loader": "^1.3.3",
+		"stylelint": "^13.7.2",
+		"stylelint-config-standard": "^20.0.0",
 		"vue-carousel": "^0.18.0",
 		"vue-headroom": "^0.10.1",
 		"vue-loader": "^15.9.0",
